# Hub

./: .gitignore  README.md  VERSION  alembic.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: config.py  db.py  deps.py  log.py  main.py  redis_client.py
app/api/: activity.py  ai.py  assessments.py  attachments.py  audit.py  automations.py  calendar.py  comments.py  courses.py  custom_fields.py  dependencies.py  employees.py  env.py  favorites.py  labels.py  learn_analytics.py  learn_home.py  learn_search.py  library.py  me.py  me_tasks.py  media.py  news.py  notifications.py  org.py  products.py  projects.py  public.py  push.py  quizzes.py  search.py  sections.py  share.py  shifts.py  stats.py  surveys.py  tasks.py  tenant.py  timeline.py  watchers.py
app/jobs/: _common.py  automations_run.py  backfill_activity.py  course_due_soon.py  due_soon.py  inactivity.py  overdue.py  review_due.py
app/models/: __init__.py  activity.py  ai.py  assessment.py  attachment.py  audience.py  audit.py  automation.py  course.py  custom_field.py  dependency.py  employee_profile.py  engagement.py  learning_settings.py  library.py  mixins.py  news.py  (+16 more)
deploy/: .env.example  bootstrap-vps.sh  deploy.sh
docs/: ARCHITECTURE.md  DEPLOY.md  PUSH.md  ROADMAP.md  TECH_DEBT.md
migrations/: env.py
scripts/: backup-cleanup.sh  backup-files.sh  backup-pg.sh  generate_vapid.py  healthcheck.sh
tests/: conftest.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
(+329 files in other folders)
