[project]
name = "signaris-hub"
version = "0.1.0"
description = "Signaris Hub — корпоративный таск-трекер"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "structlog>=24.4",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "pywebpush>=2.0.0",
    "signaris-auth-client[fastapi,sqlalchemy]>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "testcontainers[postgres]>=4.0",
    "mypy>=1.10",
]
sentry = [
    "sentry-sdk[fastapi]>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "S", "T20", "RET", "SIM"]
ignore = [
    "S101",
    "B008",
    "S110",
    "N811",
    "N818",
    "S105",
    "B904",
    "SIM105",
    "UP042",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "T20", "C408"]
"scripts/**" = ["T20"]
"migrations/**" = ["E501", "S608"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.*",
]
